tests/neg-custom-args/captures/classified-inheritance2.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/classified-inheritance2.scala:12:27 ----------------------
12 |  val t: Logger^{} = Logger()  // error
   |                     ^^^^^^^^
   |Found:    Logger^{any.rd}
   |Required: Logger^{}
   |
   |Note that capability `any.rd` cannot flow into capture set {}.
   |
   |where:    any is a root capability classified as SharedCapability created in value t when constructing instance Logger
   |
   | longer explanation available when compiling with `-explain`
